<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="hint_full_name">Full name</string>
    <string name="hint_email">Email</string>
    <string name="hint_email_optional">Email Address (optional)</string>
    <string name="next">Next</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_phone_number_optional">Phone number (Optional)</string>
    <string name="validation_full_name_empty">Please enter full name</string>
    <string name="validation_email_empty">Please enter email</string>
    <string name="validation_email_invalid">Please enter valid email</string>
    <string name="validation_email_invalid_optional">Please enter valid email or leave it empty</string>
    <string name="validation_phone_no_empty">Please enter phone number.</string>
    <string name="validation_phone_no_invalid">Please enter valid phone number</string>
    <string name="validation_phone_no_invalid_optional">Please enter valid phone number or leave it empty</string>
    <string name="my_credit_card">My Credit Card</string>
    <string name="description_btn_bbm">BBM Button</string>
    <string name="description_mandiri_token_instruction">Mandiri Token Instruction</string>
    <string name="description_payment_method_cover">Payment Method List</string>
    <string name="description_dialog_title">Dialog title image</string>
    <string name="description_help_icon">Show help</string>
    <string name="description_transaction_status">Transaction status</string>
    <string name="description_delete_card">Delete card</string>
    <string name="description_question_mark">Question Mark</string>
    <string name="description_google_play">Get on Google Play</string>
    <string name="description_minus_button">Minus</string>
    <string name="description_plus_button">Plus</string>
    <string name="description_success_transaction">Success</string>
    <string name="description_arrow">Arrow</string>
    <string name="description_bank_icon">Bank icon</string>
    <string name="description_payment_method_icon">Payment method icon</string>
    <string name="text_payment_type_here">Payment Type here</string>
    <string name="text_transaction_time_here">Transaction Time Here</string>
    <string name="text_sample_card_expiry">XX/XX</string>
    <string name="text_billpay_code_here">billpay code here</string>
    <string name="text_sample_masked_credit_card" tools:ignore="Typos">XXXX XXXX XXXX 1234</string>
    <string name="text_company_code_here">company code here</string>
    <string name="text_bank_name">Bank name</string>
    <string name="text_sample_valid_date">Valid Until : 10 September 2015, 16:00</string>
    <string name="text_demo">demo</string>
    <string name="text_demo_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam fringilla nulla vel purus feugiat, ut accumsan sapien faucibus. Nullam sit amet ipsum at ipsum elementum tempus id rutrum odio. Sed fermentum lacus id sapien mollis tincidunt. Sed id elementum ipsum, sit amet ultricies risus. Nulla facilisi. Etiam sit amet tortor vitae elit eleifend molestie eu vitae odio. Etiam ut posuere arcu. Nullam tempus nisl sed metus auctor feugiat at a sapien. Pellentesque dignissim velit commodo, dapibus libero eget, lacinia tellus. Fusce congue posuere erat. Donec facilisis, massa vitae varius ultrices, metus ligula accumsan justo, eu mollis erat diam quis magna. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In a pretium libero, vel bibendum quam. Ut eu lacinia erat. Suspendisse vel lacus sit amet mi placerat feugiat.</string>
    <string name="text_test">test</string>
    <string name="text_input_one_here">Input 1 here</string>
    <string name="text_input_two_here">Input 2 here</string>
    <string name="text_input_three_here">Input 3 here</string>
    <string name="text_three">3</string>
    <string name="text_amount_here">Amount here</string>
    <string name="text_amount">Amount </string>
    <string name="text_order_id_here">Order Id here</string>
    <string name="text_colon">:</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_accept">Accept</string>
    <string name="activity_select_bank">Choose Bank</string>
    <string name="activity_bank_transfer_bca">BCA Bank Transfer</string>
    <string name="activity_bank_transfer_mandiri">Mandiri Bank Transfer</string>
    <string name="activity_bank_transfer_permata">Permata Bank Transfer</string>
    <string name="activity_save_credit_card">Registered Credit Card</string>
    <string name="activity_uob_list">UOB EZ Pay</string>
    <string name="title_user_details">User Information</string>
    <string name="hint_address">Address</string>
    <string name="hint_city">City</string>
    <string name="hint_zip_code">Zipcode</string>
    <string name="hint_country">Country</string>
    <string name="billing_address">Billing Address</string>
    <string name="title_shipping_billing_address"><![CDATA[Shipping & Billing address]]></string>
    <string name="shipping_address">Shipping Address</string>
    <string name="shipping_cb_message">Same as billing address</string>
    <string name="validation_billingaddress_empty">Please enter billing address</string>
    <string name="validation_billingcity_empty">Please enter billing city</string>
    <string name="validation_billingzipcode_empty">Please enter billing zipcode</string>
    <string name="validation_billingcountry_empty">Please enter billing country</string>
    <string name="validation_billingzipcode_invalid">Please enter valid zipcode</string>
    <string name="validation_shippingaddress_empty">Please enter shipping address</string>
    <string name="validation_shippingcity_empty">Please enter shipping address</string>
    <string name="validation_shippingzipcode_empty">Please enter valid shipping zipcode</string>
    <string name="validation_shippingcountry_empty">Please enter shipping country</string>
    <string name="validation_shippingzipcode_invalid">Please enter valid shipping zipcode</string>
    <string name="validation_billingcountry_notexist">Please enter valid country</string>
    <string name="pay_with">Pay With</string>
    <string name="payable_amount">Total Amount</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="font_open_sans_regular">open_sans_regular</string>
    <string name="font_open_sans_bold">open_sans_bold</string>
    <string name="font_open_sans_semibold">open_sans_semi_bold</string>
    <string-array name="payment_methods">
        <item>Offers</item>
        <item>Credit/Debit Card</item>
        <item>Mandiri Clickpay</item>

        <item>CIMB Clicks</item>
        <item>BRImo</item>
        <item>BBM Money</item>

        <item>Indosat Dompetku</item>
        <item>Mandiri e-Cash</item>
        <item>Bank Transfer</item>
        <item>Mandiri Bill Payment</item>
        <item>Indomaret</item>
    </string-array>
    <string name="hint_name_on_card">Name on the card</string>
    <string name="hint_card_number">Credit card number</string>
    <string name="hint_cvv">CVV</string>
    <string name="save_card_message">Save card for later use</string>
    <string name="save_card_dialog">We will securely save your card details so you can reuse them later.</string>
    <string name="pay_now">Pay Now</string>
    <string name="pay_with_instalments">INSTALLMENT PAYMENT PLAN</string>
    <string name="instruction">Instructions</string>
    <string name="bca_klik_pay_instruction_step1">You will be redirected to BCA KlikPay once you click <b>Confirm Payment</b> button.</string>
    <string name="bca_klik_pay_instruction_step2">After Login to your BCA Klikpay Account by entering your email address and password, it will display transaction information such as merchant name, transaction time, and amount to be paid. Choose the type of payment KlikBCA or BCA Card for the transaction.</string>
    <string name="bca_klik_pay_instruction_step3">To authorize payment with BCA KlikPay, press the <b>Send OTP</b> button, and you will receive an OTP (One Time Password) code sent via SMS to your mobile phone. Enter the OTP code in the fields provided.</string>
    <string name="bca_klik_pay_instruction_step4">If your OTP code is correct, your payment will be processed immediately and your account balance (for KlikBCA payment type) or your BCA Card limit (for BCA Card payment type) will be reduced according to amount of transaction value.</string>
    <string name="bca_klik_pay_instruction_step5">Your transaction success status will appear on the transaction screen and you will receive a notification email.</string>
    <string name="bca_klik_pay_instruction_step6">For more information about BCA KlikPay please contact Halo BCA at (021) 1500888 or visit <a href="http://klikbca.com/KlikPay/klikpay.html">http://klikbca.com/KlikPay/klikpay.html</a>.</string>
    <string name="alfamart_instruction_step1">After confirming your payment, we will issue you a unique <b>Payment Code</b> number.</string>
    <string name="alfamart_instruction_step2">Note down your <b>Payment Code</b> and <b>total amount</b>. Don\'t worry, we will also mail you a copy of this payment instructions to your email.</string>
    <string name="alfamart_instruction_step3">Go to an <b>Alfamart</b>, <b>Alfamidi</b>, or <b>Dan+Dan</b> store near you and provide the cashier with the  <b>Payment Code</b> number.</string>
    <string name="alfamart_instruction_step4">The cashier will then confirm the transaction by asking for the <b>transaction amount</b> and the <b>merchant name</b>.</string>
    <string name="alfamart_instruction_step5">Confirm the payment with the cashier to proceed payment.</string>
    <string name="alfamart_instruction_step6">Your transaction is successful! You should be receiving an email confirming your payment. Please keep your payment receipt just in case you need help via support.</string>
    <string name="instruction_1">1.</string>
    <string name="instruction_2">2.</string>
    <string name="instruction_3">3.</string>
    <string name="instruction_4">4.</string>
    <string name="instruction_5">5.</string>
    <string name="instruction_6">6.</string>
    <string name="number_instruction1">1.</string>
    <string name="number_instruction2">2.</string>
    <string name="number_instruction3">3.</string>
    <string name="number_instruction4">4.</string>
    <string name="number_instruction5">5.</string>
    <string name="number_instruction6">6.</string>
    <string name="item_header">ITEM(S)</string>
    <string name="quantity_header">QTY</string>
    <string name="price_header">PRICE</string>
    <string name="tnc_bni_point_1">This program cannot be combined with BNI credit card installment program.</string>
    <string name="tnc_bni_point_2">\"Hemat hingga 100% dengan BNI Reward Points\" program will directly deduct the points on transaction.</string>
    <string name="tnc_bni_point_3">If transaction is cancelled completely, credit and reward points will be refunded to customer\'s credit card. If transaction is cancelled partially, transaction that will be refunded first is the credit card transaction, after that it will be refunded from the points.</string>
    <string name="tnc_bni_point_4">Card holder\'s reward points that have been converted into Rupiah can be seen when card holder chooses to use BNI Reward Points by clicking \"BNI Reward Points\" button.</string>
    <string name="tnc_bni_point_5">Card holder can choose how many points they would like to redeem. There is no minimum point to redeem.</string>
    <string name="tnc_bni_point_6">Payment for reward points to merchant is the same as regular card payment.</string>
    <string name="alfamart_instruction_step0">Pay from any <b>Alfamart</b>, <b>Alfamidi</b>, or <b>Dan+Dan</b> outlet</string>
</resources>