<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.midtrans.sdk.uikit.widgets.DefaultTextView
        android:id="@+id/text_notification"
        style="@style/OtpNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.midtrans.sdk.uikit.widgets.DefaultTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:paddingLeft="@dimen/sixteen_dp"
        android:paddingRight="@dimen/sixteen_dp"
        android:text="@string/instruction"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/primary_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:background="@color/light_gray"
        android:paddingBottom="@dimen/eight_dp"
        android:paddingLeft="@dimen/sixteen_dp"
        android:paddingRight="@dimen/sixteen_dp"
        android:paddingTop="@dimen/eight_dp">

        <TextView
            android:layout_width="@dimen/twenty_four_dp"
            android:layout_height="wrap_content"
            android:text="@string/number_instruction1" />

        <com.midtrans.sdk.uikit.widgets.DefaultTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bca_klik_pay_instruction_step1"
            android:textColor="@color/black"
            android:textSize="@dimen/secondary_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/eight_dp"
        android:paddingLeft="@dimen/sixteen_dp"
        android:paddingRight="@dimen/sixteen_dp"
        android:paddingTop="@dimen/eight_dp">

        <TextView
            android:layout_width="@dimen/twenty_four_dp"
            android:layout_height="wrap_content"
            android:text="@string/number_instruction2" />

        <com.midtrans.sdk.uikit.widgets.DefaultTextView
            android:id="@+id/defaultTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bca_klik_pay_instruction_step2"
            android:textColor="@color/black"
            android:textSize="@dimen/secondary_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        android:paddingBottom="@dimen/eight_dp"
        android:paddingLeft="@dimen/sixteen_dp"
        android:paddingRight="@dimen/sixteen_dp"
        android:paddingTop="@dimen/eight_dp">

        <TextView
            android:layout_width="@dimen/twenty_four_dp"
            android:layout_height="wrap_content"
            android:text="@string/number_instruction3" />

        <com.midtrans.sdk.uikit.widgets.DefaultTextViewWithLink
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:lineSpacingExtra="2dp"
            android:text="@string/bca_klik_pay_instruction_step3"
            android:textColor="@color/black"
            android:textSize="@dimen/secondary_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/eight_dp"
        android:paddingLeft="@dimen/sixteen_dp"
        android:paddingRight="@dimen/sixteen_dp"
        android:paddingTop="@dimen/eight_dp">

        <TextView
            android:layout_width="@dimen/twenty_four_dp"
            android:layout_height="wrap_content"
            android:text="@string/number_instruction4" />

        <com.midtrans.sdk.uikit.widgets.DefaultTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="2dp"
            android:text="@string/bca_klik_pay_instruction_step4"
            android:textColor="@color/black"
            android:textSize="@dimen/secondary_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        android:paddingBottom="@dimen/eight_dp"
        android:paddingLeft="@dimen/sixteen_dp"
        android:paddingRight="@dimen/sixteen_dp"
        android:paddingTop="@dimen/eight_dp">

        <TextView
            android:layout_width="@dimen/twenty_four_dp"
            android:layout_height="wrap_content"
            android:text="@string/number_instruction5" />

        <com.midtrans.sdk.uikit.widgets.DefaultTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:lineSpacingExtra="2dp"
            android:text="@string/bca_klik_pay_instruction_step5"
            android:textColor="@color/black"
            android:textSize="@dimen/secondary_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/sixteen_dp"
        android:paddingLeft="@dimen/sixteen_dp"
        android:paddingRight="@dimen/sixteen_dp"
        android:paddingTop="@dimen/eight_dp">

        <TextView
            android:layout_width="@dimen/twenty_four_dp"
            android:layout_height="wrap_content"
            android:text="@string/number_instruction6" />

        <com.midtrans.sdk.uikit.widgets.DefaultTextViewWithLink
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="2dp"
            android:text="@string/bca_klik_pay_instruction_step6"
            android:textColor="@color/black"
            android:textSize="@dimen/secondary_text_size" />
    </LinearLayout>
</LinearLayout>