<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:paddingLeft="@dimen/sixteen_dp"
        android:paddingRight="@dimen/sixteen_dp"
        android:orientation="horizontal">
        <com.midtrans.sdk.uikit.widgets.DefaultTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/sixteen_dp"
            android:text="@string/instruction"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/primary_text_size" />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/twenty_four_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:scaleType="fitCenter"
            android:src="@drawable/alfamart"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/twenty_four_dp"
            android:layout_marginRight="@dimen/eight_dp"
            android:scaleType="fitCenter"
            android:src="@drawable/alfamidi"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/twenty_four_dp"
            android:scaleType="fitCenter"
            android:src="@drawable/dandan"/>
    </LinearLayout>

    <com.midtrans.sdk.uikit.widgets.DefaultTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:text="@string/alfamart_instruction_step0"
        android:textColor="@color/black"
        android:textSize="@dimen/secondary_text_size"
        android:paddingBottom="@dimen/four_dp"
        android:paddingLeft="@dimen/sixteen_dp"
        android:paddingRight="@dimen/sixteen_dp"
        android:paddingTop="@dimen/four_dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:background="@color/light_gray"
        android:paddingBottom="@dimen/four_dp"
        android:paddingLeft="@dimen/sixteen_dp"
        android:paddingRight="@dimen/sixteen_dp"
        android:paddingTop="@dimen/four_dp">

        <TextView
            android:layout_width="@dimen/twenty_four_dp"
            android:layout_height="wrap_content"
            android:text="@string/number_instruction1" />

        <com.midtrans.sdk.uikit.widgets.DefaultTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alfamart_instruction_step1"
            android:textColor="@color/black"
            android:textSize="@dimen/secondary_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="2dp"
        android:paddingBottom="@dimen/four_dp"
        android:paddingLeft="@dimen/sixteen_dp"
        android:paddingRight="@dimen/sixteen_dp"
        android:paddingTop="@dimen/four_dp">

        <TextView
            android:layout_width="@dimen/twenty_four_dp"
            android:layout_height="wrap_content"
            android:text="@string/number_instruction2" />

        <com.midtrans.sdk.uikit.widgets.DefaultTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alfamart_instruction_step2"
            android:textColor="@color/black"
            android:textSize="@dimen/secondary_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        android:lineSpacingExtra="2dp"
        android:paddingBottom="@dimen/four_dp"
        android:paddingLeft="@dimen/sixteen_dp"
        android:paddingRight="@dimen/sixteen_dp"
        android:paddingTop="@dimen/four_dp">

        <TextView
            android:layout_width="@dimen/twenty_four_dp"
            android:layout_height="wrap_content"
            android:text="@string/number_instruction3" />

        <com.midtrans.sdk.uikit.widgets.DefaultTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alfamart_instruction_step3"
            android:textColor="@color/black"
            android:textSize="@dimen/secondary_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="2dp"
        android:paddingBottom="@dimen/four_dp"
        android:paddingLeft="@dimen/sixteen_dp"
        android:paddingRight="@dimen/sixteen_dp"
        android:paddingTop="@dimen/four_dp">

        <TextView
            android:layout_width="@dimen/twenty_four_dp"
            android:layout_height="wrap_content"
            android:text="@string/number_instruction4" />

        <com.midtrans.sdk.uikit.widgets.DefaultTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alfamart_instruction_step4"
            android:textColor="@color/black"
            android:textSize="@dimen/secondary_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        android:lineSpacingExtra="2dp"
        android:paddingBottom="@dimen/four_dp"
        android:paddingLeft="@dimen/sixteen_dp"
        android:paddingRight="@dimen/sixteen_dp"
        android:paddingTop="@dimen/four_dp">

        <TextView
            android:layout_width="@dimen/twenty_four_dp"
            android:layout_height="wrap_content"
            android:text="@string/number_instruction5" />

        <com.midtrans.sdk.uikit.widgets.DefaultTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alfamart_instruction_step5"
            android:textColor="@color/black"
            android:textSize="@dimen/secondary_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="2dp"
        android:paddingBottom="@dimen/four_dp"
        android:paddingLeft="@dimen/sixteen_dp"
        android:paddingRight="@dimen/sixteen_dp"
        android:paddingTop="@dimen/four_dp">

        <TextView
            android:layout_width="@dimen/twenty_four_dp"
            android:layout_height="wrap_content"
            android:text="@string/number_instruction6" />

        <com.midtrans.sdk.uikit.widgets.DefaultTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alfamart_instruction_step6"
            android:textColor="@color/black"
            android:textSize="@dimen/secondary_text_size" />
    </LinearLayout>

</LinearLayout>