<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/four_dp"
        android:background="@color/light_gray_min"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/five_dp"
        android:paddingLeft="@dimen/eight_dp"
        android:paddingRight="@dimen/eight_dp"
        android:paddingTop="@dimen/five_dp">

        <com.midtrans.sdk.uikit.widgets.DefaultTextView
            android:layout_width="@dimen/twenty_four_dp"
            android:layout_height="wrap_content"
            android:text="@string/instruction_1"
            android:textColor="@color/black" />

        <com.midtrans.sdk.uikit.widgets.DefaultTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:lineSpacingExtra="2dp"
            android:text="@string/tnc_bni_point_1"
            android:textColor="@color/black"
            android:textSize="@dimen/secondary_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight_dp"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/five_dp"
        android:paddingLeft="@dimen/eight_dp"
        android:paddingRight="@dimen/eight_dp"
        android:paddingTop="@dimen/five_dp">

        <TextView
            android:layout_width="@dimen/twenty_four_dp"
            android:layout_height="wrap_content"
            android:text="@string/instruction_2"
            android:textColor="@color/black" />

        <com.midtrans.sdk.uikit.widgets.DefaultTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="2dp"
            android:text="@string/tnc_bni_point_2"
            android:textColor="@color/black"
            android:textSize="@dimen/secondary_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/four_dp"
        android:background="@color/light_gray_min"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/five_dp"
        android:paddingLeft="@dimen/eight_dp"
        android:paddingRight="@dimen/eight_dp"
        android:paddingTop="@dimen/five_dp">

        <com.midtrans.sdk.uikit.widgets.DefaultTextView
            android:layout_width="@dimen/twenty_four_dp"
            android:layout_height="wrap_content"
            android:text="@string/instruction_3"
            android:textColor="@color/black" />

        <com.midtrans.sdk.uikit.widgets.DefaultTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:lineSpacingExtra="2dp"
            android:text="@string/tnc_bni_point_3"
            android:textColor="@color/black"
            android:textSize="@dimen/secondary_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight_dp"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/five_dp"
        android:paddingLeft="@dimen/eight_dp"
        android:paddingRight="@dimen/eight_dp"
        android:paddingTop="@dimen/five_dp">

        <TextView
            android:layout_width="@dimen/twenty_four_dp"
            android:layout_height="wrap_content"
            android:text="@string/instruction_4"
            android:textColor="@color/black" />

        <com.midtrans.sdk.uikit.widgets.DefaultTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="2dp"
            android:text="@string/tnc_bni_point_4"
            android:textColor="@color/black"
            android:textSize="@dimen/secondary_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/four_dp"
        android:background="@color/light_gray_min"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/five_dp"
        android:paddingLeft="@dimen/eight_dp"
        android:paddingRight="@dimen/eight_dp"
        android:paddingTop="@dimen/five_dp">

        <com.midtrans.sdk.uikit.widgets.DefaultTextView
            android:layout_width="@dimen/twenty_four_dp"
            android:layout_height="wrap_content"
            android:text="@string/instruction_5"
            android:textColor="@color/black" />

        <com.midtrans.sdk.uikit.widgets.DefaultTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:lineSpacingExtra="2dp"
            android:text="@string/tnc_bni_point_5"
            android:textColor="@color/black"
            android:textSize="@dimen/secondary_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight_dp"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/five_dp"
        android:paddingLeft="@dimen/eight_dp"
        android:paddingRight="@dimen/eight_dp"
        android:paddingTop="@dimen/five_dp">

        <TextView
            android:layout_width="@dimen/twenty_four_dp"
            android:layout_height="wrap_content"
            android:text="@string/instruction_6"
            android:textColor="@color/black" />

        <com.midtrans.sdk.uikit.widgets.DefaultTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="2dp"
            android:text="@string/tnc_bni_point_6"
            android:textColor="@color/black"
            android:textSize="@dimen/secondary_text_size" />
    </LinearLayout>

</LinearLayout>